--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
@@ -192,7 +192,7 @@
                           </mat-error>
                           <mat-error *ngIf="vendorRegistrationFormGroup.get('Phone2').touched && !vendorRegistrationFormGroup.get('Phone2').hasError('required') &&
                         vendorRegistrationFormGroup.get('Phone2').hasError('pattern')">
-                            Please enter a valid phone number
+                            Please enter a valid mobile number
                           </mat-error>
                         </mat-form-field>
                       </div>
