--- a/src/app/allModules/pages/company-details/company-details.component.html
+++ b/src/app/allModules/pages/company-details/company-details.component.html
@@ -24,107 +24,117 @@
                         <strong>Basic Details</strong>
                       </div>
                     </div>
-                    <div fxFlex="66">
+                    <div fxFlex="66" [style.display]="GetOBDFieldVisibility('Name')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
-                        <input matInput placeholder="Name" formControlName="Name">
+                        <input matInput [placeholder]="GetOBDFieldLabel('Name')" formControlName="Name">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Name').touched && vendorRegistrationFormGroup.get('Name').hasError('required')">
-                          Name is required
+                          {{GetOBDFieldLabel('Name')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="33">
+
+                    <div fxFlex="33" [style.display]="GetOBDFieldVisibility('Role')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
                         <!-- <input matInput placeholder="Role" formControlName="Role"> -->
-                        <mat-select matInput placeholder="Role" formControlName="Role">
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Role')"
+                          (selectionChange)="RoleSelected($event)" formControlName="Role">
                           <mat-option *ngFor="let rol of AllRoles" [value]="rol">{{rol}}</mat-option>
                         </mat-select>
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Role').touched && vendorRegistrationFormGroup.get('Role').hasError('required')">
-                          Role is required
+                          {{GetOBDFieldLabel('Role')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100">
+
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('LegalName')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
-                        <input #legalName matInput placeholder="Legal Name" formControlName="LegalName">
+                        <input #legalName matInput [placeholder]="GetOBDFieldLabel('LegalName')"
+                          formControlName="LegalName">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('LegalName').touched && vendorRegistrationFormGroup.get('LegalName').hasError('required')">
-                          Legal Name is required
+                          {{GetOBDFieldLabel('LegalName')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="50">
+
+                    <div fxFlex="50" [style.display]="GetOBDFieldVisibility('Type')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
                         <!-- <input matInput placeholder="Type" formControlName="Type"> -->
-                        <mat-select matInput placeholder="Type" formControlName="Type">
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Type')" formControlName="Type">
                           <mat-option *ngFor="let type of AllTypes" [value]="type">{{type}}</mat-option>
                         </mat-select>
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Type').touched && vendorRegistrationFormGroup.get('Type').hasError('required')">
-                          Type is required
+                          {{GetOBDFieldLabel('Type')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
+
                     <div fxFlex="100">
                       <div class="SectionTitle mb-8">
                         <strong>Contact Info.</strong>
                       </div>
                     </div>
-                    <div fxFlex="50" fxLayout>
+
+                    <div fxFlex="50" fxLayout [style.display]="GetOBDFieldVisibility('Phone1')">
                       <div fxFlex>
                         <mat-form-field class="pl-8 pr-40" style="width: 100%;">
-                          <!-- <div matPrefix class="pr-4 mr-4 borderRightClass">+91</div> -->
-                          <input matInput placeholder="LandLine Number" formControlName="Phone1">
+                          <!-- <div matPrefix class="pr-4 mr-4 borderRightClass"></div> -->
+                          <input matInput [placeholder]="GetOBDFieldLabel('Phone1')" formControlName="Phone1">
                           <mat-error
                             *ngIf="vendorRegistrationFormGroup.get('Phone1').touched && vendorRegistrationFormGroup.get('Phone1').hasError('required')">
-                            LandLine Number is required
+                            {{GetOBDFieldLabel('Phone1')}} is required is required
                           </mat-error>
                           <mat-error *ngIf="vendorRegistrationFormGroup.get('Phone1').touched && !vendorRegistrationFormGroup.get('Phone1').hasError('required') &&
-                      vendorRegistrationFormGroup.get('Phone1').hasError('pattern')">
+                        vendorRegistrationFormGroup.get('Phone1').hasError('pattern')">
                             Please enter a valid phone number
                           </mat-error>
                         </mat-form-field>
                       </div>
                     </div>
-                    <div fxFlex="50" fxLayout *ngIf="SelectedBPVendorOnBoarding.Phone2">
+
+                    <div fxFlex="50" fxLayout [style.display]="GetOBDFieldVisibility('Phone2')">
                       <div fxFlex>
                         <mat-form-field class="pl-8 pr-80" style="width: 100%;">
                           <div matPrefix class="pr-4 mr-4 borderRightClass">+91</div>
-                          <input matInput placeholder="Mobile number" formControlName="Phone2">
+                          <input matInput [placeholder]="GetOBDFieldLabel('Phone2')" formControlName="Phone2">
                           <mat-error
                             *ngIf="vendorRegistrationFormGroup.get('Phone2').touched && vendorRegistrationFormGroup.get('Phone2').hasError('required')">
-                            Mobile number is required
+                            {{GetOBDFieldLabel('Phone2')}} is required
                           </mat-error>
                           <mat-error *ngIf="vendorRegistrationFormGroup.get('Phone2').touched && !vendorRegistrationFormGroup.get('Phone2').hasError('required') &&
-                      vendorRegistrationFormGroup.get('Phone2').hasError('pattern')">
+                        vendorRegistrationFormGroup.get('Phone2').hasError('pattern')">
                             Please enter a valid mobile number
                           </mat-error>
                         </mat-form-field>
                       </div>
                     </div>
-                    <div fxFlex="100">
+
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('Email1')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
-                        <input matInput placeholder="Email1" formControlName="Email1">
+                        <input matInput [placeholder]="GetOBDFieldLabel('Email1')" formControlName="Email1">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Email1').touched && vendorRegistrationFormGroup.get('Email1').hasError('required')">
-                          Email1 is required
+                          {{GetOBDFieldLabel('Email1')}} is required
                         </mat-error>
                         <mat-error *ngIf="vendorRegistrationFormGroup.get('Email1').touched && !vendorRegistrationFormGroup.get('Email1').hasError('required') &&
-                      vendorRegistrationFormGroup.get('Email1').hasError('email')">
+                        vendorRegistrationFormGroup.get('Email1').hasError('email')">
                           Please enter a valid email address
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100" *ngIf="SelectedBPVendorOnBoarding.Email2">
+
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('Email2')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
-                        <input matInput placeholder="Email2" formControlName="Email2">
+                        <input matInput [placeholder]="GetOBDFieldLabel('Email2')" formControlName="Email2">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Email2').touched && vendorRegistrationFormGroup.get('Email2').hasError('required')">
-                          Email2 is required
+                          {{GetOBDFieldLabel('Email2')}} is required
                         </mat-error>
                         <mat-error *ngIf="vendorRegistrationFormGroup.get('Email2').touched && !vendorRegistrationFormGroup.get('Email2').hasError('required') &&
-                      vendorRegistrationFormGroup.get('Email2').hasError('email')">
+                        vendorRegistrationFormGroup.get('Email2').hasError('email')">
                           Please enter a valid email address
                         </mat-error>
                       </mat-form-field>
@@ -138,65 +148,69 @@
                         <strong>Address</strong>
                       </div>
                     </div>
-                    <div fxFlex="50">
+                    <div fxFlex="50" [style.display]="GetOBDFieldVisibility('Country')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
                         <!-- <input matInput placeholder="Country" formControlName="Country"> -->
-                        <mat-select matInput placeholder="Country" formControlName="Country">
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Country')" formControlName="Country">
                           <mat-option *ngFor="let country of AllCountries" [value]="country">{{country}}</mat-option>
                         </mat-select>
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Country').touched && vendorRegistrationFormGroup.get('Country').hasError('required')">
-                          Country is required
+                          {{GetOBDFieldLabel('Country')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="50">
+
+                    <div fxFlex="50" [style.display]="GetOBDFieldVisibility('PinCode')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
-                        <input matInput placeholder="Pin Code" formControlName="PinCode"
+                        <input matInput [placeholder]="GetOBDFieldLabel('PinCode')" formControlName="PinCode"
                           (blur)="GetLocationByPincode($event)" (keyup.enter)="OnPincodeKeyEnter($event)">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('PinCode').touched && vendorRegistrationFormGroup.get('PinCode').hasError('required')">
-                          Pin Code is required
+                          {{GetOBDFieldLabel('PinCode')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100">
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('City')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
-                        <input matInput placeholder="City" formControlName="City">
+                        <input matInput [placeholder]="GetOBDFieldLabel('City')" formControlName="City">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('City').touched && vendorRegistrationFormGroup.get('City').hasError('required')">
-                          City is required
+                          {{GetOBDFieldLabel('City')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100">
+
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('State')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
                         <!-- <input matInput placeholder="State" formControlName="State"> -->
-                        <mat-select matInput placeholder="State" formControlName="State">
+                        <!-- <div matPrefix class="pr-4 mr-4 borderRightClass">{{StateCode}}</div> -->
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('State')" formControlName="State">
                           <mat-option *ngFor="let sta of AllStates" [value]="sta.State">
                             {{sta.StateCode + ' - ' + sta.State}}</mat-option>
                         </mat-select>
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('State').touched && vendorRegistrationFormGroup.get('State').hasError('required')">
-                          State is required
+                          {{GetOBDFieldLabel('State')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100">
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('AddressLine1')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
-                        <input matInput placeholder="Street/House number" formControlName="AddressLine1">
+                        <input matInput [placeholder]="GetOBDFieldLabel('AddressLine1')" formControlName="AddressLine1">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('AddressLine1').touched && vendorRegistrationFormGroup.get('AddressLine1').hasError('required')">
-                          Street/House number is required
+                          {{GetOBDFieldLabel('AddressLine1')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
-                    <div fxFlex="100">
+
+                    <div fxFlex="100" [style.display]="GetOBDFieldVisibility('AddressLine2')">
                       <mat-form-field class="pl-8 pr-40" style="width: 100%;">
-                        <input matInput placeholder="Address Line2" formControlName="AddressLine2">
+                        <input matInput [placeholder]="GetOBDFieldLabel('AddressLine2')" formControlName="AddressLine2">
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('AddressLine2').touched && vendorRegistrationFormGroup.get('AddressLine2').hasError('required')">
-                          Address Line 2 is required
+                          {{GetOBDFieldLabel('AddressLine2')}} is required
                         </mat-error>
                       </mat-form-field>
                     </div>
@@ -292,14 +306,31 @@
                   </ng-container>
 
                   <ng-container matColumnDef="ValidUntil">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;"> Valid Until </th>
-                    <td mat-cell *matCellDef="let element" style="width: 25%;"> {{element.ValidUntil | date}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 25%;" [style.display]="'none'"> Valid Until </th>
+                    <td mat-cell *matCellDef="let element" style="width: 25%;" [style.display]="'none'"> {{element.ValidUntil | date}} </td>
                   </ng-container>
 
-                  <ng-container matColumnDef="Attachment">
+                  <!-- <ng-container matColumnDef="Attachment">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Attachment </th>
                     <td mat-cell *matCellDef="let element" style="width: 20%;">
                       <mat-icon *ngIf="element.AttachmentName">attach_file</mat-icon>
+                    </td>
+                  </ng-container> -->
+                  <ng-container matColumnDef="Attachment">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Attachment </th>
+                    <td mat-cell *matCellDef="let element" style="width: 20%;">
+                      <div fxLayout *ngIf="element.AttachmentName">
+                        <div fxFlex (click)="GetIdentAttachment(element)" class="pdfLinkClass pl-8">
+                          {{element.AttachmentName}}</div>
+                        <div fxFlex align="end">
+                          <img class="addBlueIcon pdfLinkClass" src="assets/images/replay.png"
+                            (click)="ReplaceIdentificationAttachment(element)">
+                        </div>
+                      </div>
+                      <div fxLayout *ngIf="!element.AttachmentName">
+                        <img class="addBlueIcon" src="assets/images/addBlue.png"
+                          (click)="ReplaceIdentificationAttachment(element)">
+                      </div>
                     </td>
                   </ng-container>
 
