--- a/src/app/allModules/pages/company-details/company-details.component.html
+++ b/src/app/allModules/pages/company-details/company-details.component.html
@@ -28,8 +28,7 @@
                     <div fxFlex="50" [style.display]="GetOBDFieldVisibility('Role')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
                         <!-- <input matInput placeholder="Role" formControlName="Role"> -->
-                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Role')"
-                          (selectionChange)="RoleSelected($event)" formControlName="Role">
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Role')" formControlName="Role">
                           <mat-option *ngFor="let rol of AllRoles" [value]="rol">{{rol}}</mat-option>
                         </mat-select>
                         <mat-error
@@ -42,9 +41,13 @@
                     <div fxFlex="50" [style.display]="GetOBDFieldVisibility('Type')">
                       <mat-form-field class="pl-8 pr-80" style="width: 100%;">
                         <!-- <input matInput placeholder="Type" formControlName="Type"> -->
-                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Type')" formControlName="Type"
+                        <!-- <mat-select matInput [placeholder]="GetOBDFieldLabel('Type')" formControlName="Type"
                           (selectionChange)="TypeSelected($event)">
                           <mat-option *ngFor="let type of AllTypes" [value]="type">{{type}}</mat-option>
+                        </mat-select> -->
+                        <mat-select matInput [placeholder]="GetOBDFieldLabel('Type')" formControlName="Type"
+                          (selectionChange)="TypeSelected($event)">
+                          <mat-option *ngFor="let type of AllTypes" [value]="type.Value">{{type.Key}}</mat-option>
                         </mat-select>
                         <mat-error
                           *ngIf="vendorRegistrationFormGroup.get('Type').touched && vendorRegistrationFormGroup.get('Type').hasError('required')">
@@ -133,8 +136,9 @@
                         vendorRegistrationFormGroup.get('Email1').hasError('email')">
                           Please enter a valid email address
                         </mat-error>
-                        <mat-error *ngIf="vendorRegistrationFormGroup.get('Email1').touched && !vendorRegistrationFormGroup.get('Email1').hasError('required') &&
-                        vendorRegistrationFormGroup.get('Email1').hasError('pattern')">
+                        <mat-error
+                          *ngIf="vendorRegistrationFormGroup.get('Email1').touched && !vendorRegistrationFormGroup.get('Email1').hasError('required') &&
+                        !vendorRegistrationFormGroup.get('Email1').hasError('email') && vendorRegistrationFormGroup.get('Email1').hasError('pattern')">
                           Please enter a valid email address
                         </mat-error>
                       </mat-form-field>
@@ -151,8 +155,9 @@
                         vendorRegistrationFormGroup.get('Email2').hasError('email')">
                           Please enter a valid email address
                         </mat-error>
-                        <mat-error *ngIf="vendorRegistrationFormGroup.get('Email2').touched && !vendorRegistrationFormGroup.get('Email2').hasError('required') &&
-                        vendorRegistrationFormGroup.get('Email2').hasError('pattern')">
+                        <mat-error
+                          *ngIf="vendorRegistrationFormGroup.get('Email2').touched && !vendorRegistrationFormGroup.get('Email2').hasError('required') &&
+                        !vendorRegistrationFormGroup.get('Email2').hasError('email') && vendorRegistrationFormGroup.get('Email2').hasError('pattern')">
                           Please enter a valid email address
                         </mat-error>
                       </mat-form-field>
@@ -175,7 +180,8 @@
                         </mat-select> -->
                         <input type="text" placeholder="Country" matInput formControlName="Country"
                           [matAutocomplete]="auto">
-                        <mat-autocomplete #auto="matAutocomplete">
+                        <mat-autocomplete #auto="matAutocomplete"
+                          (optionSelected)='CountrySelected($event.option.value)'>
                           <mat-option *ngFor="let country of AllCountries" [value]="country.name">
                             {{country.name}}
                           </mat-option>
@@ -561,7 +567,7 @@
                       <span class="attachClass" (click)="fileInput2.click()">
                         Add Attachment
                       </span>
-                      <input hidden type="file" #fileInput2 id="file1" (change)="handleFileInput($event)" />
+                      <input hidden type="file" #fileInput2 id="file1" (change)="handleFileInput2($event)" />
                     </div>
                     <div fxFlex="25" fxLayoutAlign="end">
                       <img class="addIcon" src="assets/images/logos/add-button.png" (click)="AddBankToTable()">
@@ -610,10 +616,28 @@
                     </ng-container>
 
 
-                    <ng-container matColumnDef="Attachment">
+                    <!-- <ng-container matColumnDef="Attachment">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Attachment </th>
                       <td mat-cell *matCellDef="let element" style="width: 10%;">
                         <mat-icon *ngIf="element.AttachmentName">attach_file</mat-icon>
+                      </td>
+                    </ng-container> -->
+
+                    <ng-container matColumnDef="Attachment">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Attachment </th>
+                      <td mat-cell *matCellDef="let element;let index=index" style="width: 10%;">
+                        <div fxLayout *ngIf="element.AttachmentName">
+                          <div fxFlex (click)="GetBankAttachment(element)" class="pdfLinkClass pl-8">
+                            {{element.AttachmentName}}</div>
+                          <div fxFlex align="end">
+                            <img class="addBlueIcon pdfLinkClass" src="assets/images/replay.png"
+                              (click)="ReplaceBankAttachment(element)">
+                          </div>
+                        </div>
+                        <div fxLayout *ngIf="!element.AttachmentName">
+                          <img *ngIf="element?.AccountNo" class="addBlueIcon" src="assets/images/addBlue.png"
+                            (click)="ReplaceBankAttachment(element)">
+                        </div>
                       </td>
                     </ng-container>
 
@@ -704,6 +728,11 @@
                         </mat-error>
                         <mat-error *ngIf="contactFormGroup.get('Email').touched && !contactFormGroup.get('Email').hasError('required') &&
                         contactFormGroup.get('Email').hasError('email')">
+                          Please enter a valid email address
+                        </mat-error>
+                        <mat-error
+                          *ngIf="contactFormGroup.get('Email').touched && !contactFormGroup.get('Email').hasError('required') &&
+                      !contactFormGroup.get('Email').hasError('email') && contactFormGroup.get('Email').hasError('pattern')">
                           Please enter a valid email address
                         </mat-error>
                       </mat-form-field>
