--- a/src/app/allModules/approval/vendor-approval/vendor-approval.component.scss
+++ b/src/app/allModules/approval/vendor-approval/vendor-approval.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-#chat {
+#approval {
   background-color: white;
   .progressBarPostion {
     position: absolute !important;
