--- a/src/app/allModules/master/menu-app/menu-app.component.scss
+++ b/src/app/allModules/master/menu-app/menu-app.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-#chat {
+#menuapp {
   .progressBarPostion {
     position: absolute !important;
     bottom: 50%;
