--- a/src/app/allModules/master/reason/reason.component.html
+++ b/src/app/allModules/master/reason/reason.component.html
@@ -1,4 +1,4 @@
-<div id="chat" class="page-layout carded fullwidth inner-scroll">
+<div id="reason" class="page-layout carded fullwidth inner-scroll">
   <div class="top-bg topBg"></div>
   <div class="center normal">
     <div class="m-12 p-0 content-card" fxLayout>
