--- a/src/app/allModules/pages/company-details/company-details.component.scss
+++ b/src/app/allModules/pages/company-details/company-details.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-#chat {
+#comp {
   background-color: white;
   .progressBarPostion {
     position: absolute !important;
