--- a/src/app/allModules/master/identity/identity.component.scss
+++ b/src/app/allModules/master/identity/identity.component.scss
@@ -1,5 +1,5 @@
 @import "src/@fuse/scss/fuse";
-#chat {
+#identity {
   background-color: white;
   .outer {
     border-bottom: 1px solid rgba(255, 85, 0, 0.1);
